# progame

./: .gitignore  Makefile  README.md  design-system-progame.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
api/: api.py  permissions.py  serializers.py  urls.py
ausers/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
ausers/migrations/: 0001_initial.py  0002_auto_20200402_0253.py  0003_auto_20200426_1804.py  0004_remove_aluno_conquistas.py  0005_professor_uuid.py  0006_auto_20200601_2315.py  0007_aluno_uuid.py  0008_auto_20200729_2317.py  0009_auto_20200730_0017.py
ausers/signals/: handlers.py
ausers/templatetags/: ausers_tags.py
core/: messages.py  middleware.py  utils.py
core/templatetags/: core_tags.py
progame/: admin.py  apps.py  auth.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
progame/fixtures/: conquistas.json  niveis.json  questoes.json  verbos.json
progame/migrations/: 0001_initial.py  0002_auto_20200402_0253.py  0003_auto_20200404_1506.py  0004_auto_20200404_1516.py  0005_auto_20200414_2344.py  0006_resposta_pontos.py  0007_auto_20200416_0049.py  0008_auto_20200422_2253.py  0009_auto_20200426_0129.py  0010_questao_quiz.py  0011_conquista_itemconquista.py  0012_auto_20200429_0212.py  0013_auto_20200430_2104.py  0014_auto_20200509_0035.py  0015_conquista_visualizado.py  0016_auto_20200529_0136.py  0017_auto_20200531_1934.py  (+14 more)
quiz/: admin.py  forms.py  models.py  urls.py  views.py
sistema/: local.py  production.py  urls.py
stats/: urls.py  utils.py  views.py
(+183 files in other folders)
